hockeypuck (0.1~alpha) UNRELEASED; urgency=low

  [Casey Marshall]
  * === added directory debian, cmd/hockeypuck/main.go,
    server.go, server_test.go, types.go:
    - Opening 0.1~alpha development, create debian/changelog.
    - Added comments to server.
  * === added directory pq, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go:
    - Add a first cut at a database schema, random uuid generation.

 -- Casey Marshall <casey.marshall@gazzang.com>  Wed, 01 Aug 2012 23:10:39 -0500